src/test/ui/traits/associated_type_bound/check-trait-object-bounds-6.stderr
error[E0271]: type mismatch resolving `<i32 as Is>::T == i64`
  --> $DIR/check-trait-object-bounds-6.rs:20:5
   |
LL |     type T = U;
   |              - expected `i64`, found `i32`
...
LL | fn is_obj<T: ?Sized + Obj>(_: &T) {}
   |                       --- required by this bound in `is_obj`
...
LL |     is_obj(x)
   |     ^^^^^^ type mismatch resolving `<i32 as Is>::T == i64`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
